--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "nyc mocha --require sucrase/register --recursive --exit __test__/*.test.js"
   },
   "keywords": [],
   "author": "",
@@ -16,12 +17,16 @@
     "yup": "^0.27.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-prettier": "^3.1.1",
+    "mocha": "^6.2.0",
     "nodemon": "^2.0.2",
-    "prettier": "^1.19.1"
+    "nyc": "^15.0.0",
+    "prettier": "^1.19.1",
+    "supertest": "^4.0.2"
   }
 }
